--- a/index.html
+++ b/index.html
@@ -5,8 +5,110 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./main.css">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+          </a>
+          <ul class="topNav">
+              <li>
+                  <a class="phoneLink" href="tel:12344566">
+                      12344566
+                  </a>
+              </li>
+          </ul>
+        </div>
+    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">oscar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Shop Plans
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Medicare Advantage</a>
+                    <a class="dropdown-item" href="#">Individuals & Families</a>
+                    <a class="dropdown-item" href="#">Cigna + Oscar</a>
+                    <a class="dropdown-item" href="#">Oscar for Business</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Member Resources
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <div class="expandedDrop" href="#"><h5>YOUR PLAN</h5>
+                        <a class="dropdown-item" href="#">Find Doctors & Drugs</a>
+                        <a class="dropdown-item" href="#">Download the Oscar App</a>
+                        <a class="dropdown-item" href="#">Virtual Urgent Care</a>
+                        <a class="dropdown-item" href="#">Virtual Primary Care</a>
+                        <a class="dropdown-item" href="#">Member Log In</a>
+                    </div>
+                    <div class="expandedDrop" href="#"><h5>HELPFUL INFO</h5>
+                        <a class="dropdown-item" href="#">Frequently Asked Questions</a>
+                        <a class="dropdown-item" href="#">COVID-19 Resources</a>
+                        <a class="dropdown-item" href="#">Your Care Team</a>
+                        <a class="dropdown-item" href="#">$3 Prescriptions</a>
+                        <a class="dropdown-item" href="#">Member Forms</a>
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    For Brokers & Providers
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <div class="expandedDrop" href="#"><h5>FOR BROKERS</h5>
+                        <a class="dropdown-item" href="#">Broker Overview</a>
+                        <a class="dropdown-item" href="#">Plan Documents</a>
+                        <a class="dropdown-item" href="#">Training & Marketing</a>
+                        <a class="dropdown-item" href="#">Coverage Documents</a>
+                        <a class="dropdown-item" href="#">Broker Log In</a>
+                    </div>
+                    <div class="expandedDrop" href="#"><h5>FOR PROVIDERS</h5>
+                        <a class="dropdown-item" href="#">Provider Overview</a>
+                        <a class="dropdown-item" href="#">Provider Manual</a>
+                        <a class="dropdown-item" href="#">Provider Resources</a>
+                        <a class="dropdown-item" href="#">Join the Network</a>
+                        <a class="dropdown-item" href="#">Provider Log In</a>
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                About Us
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <div class="expandedDrop" href="#"><h5>ABOUT OSCAR</h5>
+                    <a class="dropdown-item" href="#">Our Story</a>
+                    <a class="dropdown-item" href="#">Newsroom</a>
+                    <a class="dropdown-item" href="#">Blog</a>
+                    <a class="dropdown-item" href="#">Careers</a>
+                    <a class="dropdown-item" href="#">Contact Us</a>
+                </div>
+                <div class="expandedDrop" href="#"><h5>FOR INVESTORS</h5>
+                    <a class="dropdown-item" href="#">Corporate Overview</a>
+                    <a class="dropdown-item" href="#">Press Releases & Events</a>
+                    <a class="dropdown-item" href="#">SEC Filings & Financials</a>
+                    <a class="dropdown-item" href="#">Governance</a>
+                    <a class="dropdown-item" href="#">Resources & Contacts</a>
+                </div>  
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
 </body>
 </html>
