--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <div class="expandedDrop" href="#"><h5>YOUR PLAN</h5>
-                        <a class="dropdown-item" href="#">Find Doctors & Drugs</a>
-                        <a class="dropdown-item" href="#">Download the Oscar App</a>
-                        <a class="dropdown-item" href="#">Virtual Urgent Care</a>
-                        <a class="dropdown-item" href="#">Virtual Primary Care</a>
-                        <a class="dropdown-item" href="#">Member Log In</a>
+                        <div class="container">
+                            <a class="dropdown-item" href="#">Find Doctors & Drugs</a>
+                            <a class="dropdown-item" href="#">Download the Oscar App</a>
+                            <a class="dropdown-item" href="#">Virtual Urgent Care</a>
+                            <a class="dropdown-item" href="#">Virtual Primary Care</a>
+                            <a class="dropdown-item" href="#">Member Log In</a>
+                        </div>
                     </div>
                     <div class="expandedDrop" href="#"><h5>HELPFUL INFO</h5>
                         <a class="dropdown-item" href="#">Frequently Asked Questions</a>
